fix(block)：修复变种方块不会继承原方块标签的问题。